mise en forme elements du header avec css

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <span id="title">ForEach Cinéma</span>
-            <nav>
+            <nav id="nav_container">
                 <ul>
                     <li>
                         <a href="">
