creation responsive pour header

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -21,7 +21,7 @@
             <span id="title">ForEach Cinéma</span>
             <nav id="nav_container">
                 <ul>
-                    <li>
+                    <li id="li_mon_compte">
                         <a href="">
                             <div class="icon-container">
                                 <img src="../assets/icons/transcribe_FILL0_wght400_GRAD0_opsz24.png" alt=""/>
@@ -29,7 +29,7 @@
                             <span>Mon Compte</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="li_espace_pro">
                         <a href="">
                             <div class="icon-container">
                                 <img src="../assets/icons/tab_FILL0_wght400_GRAD0_opsz24.png" alt=""/>
