--- a/exemples/index.html
+++ b/exemples/index.html
@@ -15,151 +15,29 @@
     <title>ForEach Cinéma</title>
 </head>
 <body>
+    <div id="pub_et_promotion">
+        <div id="pub">
+            <img src="../assets/images/ad.png" alt="">
+        </div>
+        <div id="promotion">
+            <span>TENTEZ DE GAGNER DEUX PLACES</span>
+            <span>POUR LE FORMATEUR</span>
+            <button id="bouton_promotion">JOUER</button>
+        </div>
+    </div>
+    <div id="tarifs">
+        <h1>Tarifs</h1>
+        <div id="container_type_abonnement">
+            <div id="abo_illimity">
+                <div id="titre">
+                </div>
 
-    <header>
-        <div class="container">
-            <span id="title">ForEach Cinéma</span>
-            <nav id="nav_container">
-                <ul>
-                    <li id="li_mon_compte">
-                        <a href="">
-                            <div class="icon-container">
-                                <img src="../assets/icons/transcribe_FILL0_wght400_GRAD0_opsz24.png" alt=""/>
-                            </div>
-                            <span>Mon Compte</span>
-                        </a>
-                    </li>
-                    <li id="li_espace_pro">
-                        <a href="">
-                            <div class="icon-container">
-                                <img src="../assets/icons/tab_FILL0_wght400_GRAD0_opsz24.png" alt=""/>
-                            </div>
-                            <span>Espace Pro</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            </div>
+
         </div>
-    </header>
-  <!-- <a href="#header" class="float"
-    ><img src="./assets/icons/arrow_up.png" alt=""
-  /></a>
-  <header id="header">
-    <div class="container">
-      <span id="title">BForEach</span>
-      <nav>
-        <ul>
-          <li><a href="#header">Accueil</a></li>
-          <li><a href="#offer">Nos Offres</a></li>
-          <li><a href="#contact_us">Nous contacter</a></li>
-        </ul>
-      </nav>
+
     </div>
-  </header>
-  <main>
-    <div id="jumbotron">
-      <div id="jumbotron_text">
-        <h1>3B ForEach</h1>
-        <p>
-          L'endroit idéal pour des moments inoubliables entre amis et en
-          famille !
-        </p>
-      </div>
-    </div>
-    <div>
-      <section id="offers" class="container">
-        <h2>Nos offres</h2>
-        <p class="section_subtext">
-          Amateur ou compétiteur ? Si vous avez une revanche à prendre sur un
-          ami ou que vous souhaitez perfectionner vos compétences grâce à
-          notre formule illimité ! Venez vous amusez sur nos 10 pistes de
-          bowling/billard/baseball.
-        </p>
-        <div class="offers_block">
-          <div class="offer">
-            <div class="img_container">
-              <img
-                src="./assets/icons/bowling.png"
-                alt="Icone de l'offre Bowling"
-              />
-            </div>
-            <span>Bowling</span>
-            <div class="details">
-              <div class="detail">
-                <ul>
-                  <li><b>Prix :</b> 30€</li>
-                  <li><b>Nb/max.:</b> 8 👤</li>
-                </ul>
-              </div>
-            </div>
-            <p>Soyez le roi de la piste et des quilles !</p>
-          </div>
-          <div class="offer">
-            <div class="img_container">
-              <img
-                src="./assets/icons/baseball.png"
-                alt="Icone de l'offre Baseball"
-              />
-            </div>
-            <span>Baseball</span>
-            <div class="details">
-              <div class="detail">
-                <ul>
-                  <li><b>Prix :</b> 20€</li>
-                  <li><b>Nb/max.:</b> 6 👤</li>
-                </ul>
-              </div>
-            </div>
-            <p>Frappez fort et atteignez le home run avec nous !</p>
-          </div>
-          <div class="offer">
-            <div class="img_container">
-              <img
-                src="./assets/icons/billard_balls.png"
-                alt="Icone de l'offre Bowling"
-              />
-            </div>
-            <span>Billard</span>
-            <div class="details">
-              <div class="detail">
-                <ul>
-                  <li><b>Prix :</b> 25€</li>
-                  <li><b>Nb/max.:</b> 6 👤</li>
-                </ul>
-              </div>
-            </div>
-            <p>Réservez votre table pour une soirée de divertissement</p>
-          </div>
-        </div>
-      </section>
-      <section id="contact_us" class="container">
-        <h2>Nous contacter</h2>
-        <p class="section_subtext">
-          Contactez-nous pour toute question ou information. Nous sommes là
-          pour vous aider!
-        </p>
-        <form>
-          <div id="inputs">
-            <div class="inputs_block">
-              <input type="text" placeholder="Prénom *" />
-              <input type="email" placeholder="Email *" />
-              <input type="tel" placeholder="Numéro de téléphone" />
-            </div>
-            <div class="inputs_block">
-              <textarea placeholder="Votre message"></textarea>
-            </div>
-          </div>
-          <div id="form_button">Envoyer</div>
-        </form>
-      </section>
-    </div>
-  </main>
-  <footer>
-    <ul>
-      <li><b>© 3B ForEach</b></li>
-      <li>Mentions légales</li>
-      <li>Règles de sécurité</li>
-    </ul>
-  </footer> -->
+
+
 </body>
 </html>
