realisation colonnes tarifs et films sous pub

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -15,27 +15,36 @@
     <title>ForEach Cinéma</title>
 </head>
 <body>
-    <div id="pub_et_promotion">
-        <div id="pub">
-            <img src="../assets/images/ad.png" alt="">
+    <div id="container_general">
+        <div id="pub_et_promotion">
+            <div id="pub">
+                <img src="../assets/images/ad.png" alt="">
+            </div>
+            <div id="promotion">
+                <span>TENTEZ DE GAGNER DEUX PLACES</span>
+                <span>POUR LE FORMATEUR</span>
+                <button id="bouton_promotion">JOUER</button>
+            </div>
         </div>
-        <div id="promotion">
-            <span>TENTEZ DE GAGNER DEUX PLACES</span>
-            <span>POUR LE FORMATEUR</span>
-            <button id="bouton_promotion">JOUER</button>
+        <div id="Tarifs_et_films">
+            <div id="tarif">Tarif</div>
+            <div id="films">Films</div>
         </div>
-    </div>
-    <div id="tarifs">
-        <h1>Tarifs</h1>
-        <div id="container_type_abonnement">
-            <div id="abo_illimity">
-                <div id="titre">
+        <div id="tarifs">
+            <h1>Tarifs</h1>
+            <div id="container_type_abonnement">
+                <div id="abo_illimity">
+                    <div id="titre">
+                        <b>ForEach Illimity</b>
+                        <p>Valable tous les jours, à toutes les séances</p>
+                         </div>
+                    <div id="prix"></div>
+
                 </div>
 
             </div>
 
         </div>
-
     </div>
 
 
