creation responsive étape section

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -38,10 +38,22 @@
                         <b>ForEach Illimity</b>
                         <p>Valable tous les jours, à toutes les séances</p>
                          </div>
-                    <div id="prix"></div>
-
+                    <div id="prix">
+                        <p>19€99/mois</p>
+                    </div>
                 </div>
-
+            </div>
+            <div id="container_type_abonnement">
+                <div id="abo_illimity">
+                    <div id="titre">
+                        <b>Solo</b>
+                        <p>Valable tous les jours, à toutes les séances</p>
+                         </div>
+                    <div id="prix">
+                        <p>9€99/mois</p>
+                    </div>
+                </div>
+                
             </div>
 
         </div>
