traitement_de_arborescence

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -55,7 +55,32 @@
                 </div>
                 
             </div>
+        </div>
+        <div id="container_films">
+            <h1>Films</h1>
+            <div id="container_type_film">
+                <div id="presentation">
+                    <div id="image_film">
+                        <img src="../assets/images/moviesImages/le_formateur_poster.JPG" alt="">
+                    </div>
+                    <div id="titre_film">
+                        <p>titre film</p>
+                    </div>
+                    <div id="bouton_coup_de_coeur">
+                        <p>Coup de coeur</p>
+                    </div>
 
+                    <div id="image_etoiles">
+                        <img src="../assets/icons/tab_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    </div>
+                    <div id="comedie_button">
+                        <button>Comédie</button>
+                    </div>
+                    <div id="synopsis">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, architecto.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
