création bandeau avec film

--- a/exemples/index.html
+++ b/exemples/index.html
@@ -61,25 +61,32 @@
             <div id="container_type_film">
                 <div id="presentation">
                     <div id="image_film">
-                        <img src="../assets/images/moviesImages/le_formateur_poster.JPG" alt="">
+                        <div id="container_image_film">
+                            <img src="../assets/images/moviesImages/le_formateur_poster.JPG" alt="">
+                        </div>
+                        <div id="bouton_coup_de_coeur">
+                            <p>Coup de coeur</p>
+                        </div>
                     </div>
-                    <div id="titre_film">
-                        <p>titre film</p>
-                    </div>
-                    <div id="bouton_coup_de_coeur">
-                        <p>Coup de coeur</p>
-                    </div>
-
-                    <div id="image_etoiles">
-                        <img src="../assets/icons/tab_FILL0_wght400_GRAD0_opsz24.png" alt="">
-                    </div>
-                    <div id="comedie_button">
-                        <button>Comédie</button>
-                    </div>
+                </div>
+                <div id="containerDescriptifFilm">
+                            <div id="titre_film">
+                                <b>Le Formateur</b>
+                                <br>
+                                <br>
+                                <span>Sortie le 05 mai 2024</span>
+                            </div>
+                            <div id="image_etoiles">
+                                <img src="../assets/icons/tab_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                            </div>
+                            <div id="comedie_button">
+                                <span>Comédie</span>
+                            </div>
+                </div>
                     <div id="synopsis">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, architecto.</p>
                     </div>
-                </div>
+                
             </div>
         </div>
     </div>
