--- a/exemples/index.html
+++ b/exemples/index.html
@@ -60,38 +60,40 @@
             <h1>Films</h1>
             <div id="grand_container">
                 <div id="container_type_film">
-                    <div id="presentation">
-                        <div id="image_film">
-                            <div id="container_image_film">
-                                <img src="../assets/images/moviesImages/le_formateur_poster.JPG" alt="">
-                            </div>
-                            <div id="bouton_coup_de_coeur">
-                                <p>Coup de coeur</p>
+                    <div class="grandePresentation">
+                        <div id="presentation">
+                            <div id="image_film">
+                                <div id="container_image_film">
+                                    <img src="../assets/images/moviesImages/le_formateur_poster.JPG" alt="">
+                                </div>
+                                <div id="bouton_coup_de_coeur">
+                                    <p>Coup de coeur</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div id="containerDescriptifFilm">
-                            <div id="titre_film">
-                                    <b>Le Formateur</b><img id="coeur" src="../assets/icons/favorite_FILL0_wght400_GRAD0_opsz24.png" alt="">
-                                    <br>
-                                    <br>
-                                    <span>Sortie le 05 mai 2024</span>
-                            </div>
-                                <div id="image_etoiles">
-                                    <img src="../assets/icons/tab_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        <div id="containerDescriptifFilm">
+                                <div id="titre_film">
+                                        <b>Le Formateur</b><img id="coeur" src="../assets/icons/favorite_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                                        <br>
+                                        <br>
+                                        <span>Sortie le 05 mai 2024</span>
                                 </div>
-                                <div id="comedie_button">
-                                    <span>Comédie</span>
-                                </div>
+                                    <div id="image_etoiles">
+                                        <img src="../assets/icons/tab_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                                    </div>
+                                    <div id="comedie_button">
+                                        <span>Comédie</span>
+                                    </div>
+                        </div>
                     </div>
-                        <div id="container_synopsis">
+                    <div id="container_synopsis">
                             <div id="synopsis">
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, architecto.</p>
                             </div>
-                        </div>
-                <div id="secondBlocAvecSalles">
-                    <p>X</p>
-                </div>
+                    </div>         
+            </div> 
+            <div id="secondBlocAvecSalles">
+                <p>X</p>
             </div>
             </div>
         </div>
