--- a/exemples/index.html
+++ b/exemples/index.html
@@ -93,6 +93,14 @@
                     </div>         
             </div> 
             <div id="secondBlocAvecSalles">
+                <div class="container_salle1">
+                    <div id="seance_completON">
+                        <p>Complet</p>
+                    </div>
+                    <div id="horaires">
+                        <p>Horaires</p>
+                    </div>
+                </div>
                 <p>X</p>
             </div>
             </div>
